##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pybel
version = attr: pybel.constants.VERSION
url = https://github.com/pybel/pybel
download_url = https://github.com/pybel/pybel/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel/issues
    Source Code = https://github.com/pybel/pybel
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache 2.0 License
license_file = LICENSE
description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL).
long_description = file: README.rst
keywords =
    Biological Expression Language
	BEL
    Systems Biology
	Networks Biology

[options]
install_requires =
    networkx>=2.1
    sqlalchemy
    click
    click-plugins
    requests
    requests_file
    pyparsing
    six
    tqdm
    configparser; python_version < "3"
    functools32; python_version < "3"
    funcsigs; python_version < "3"
tests_require =
	mock
	pathlib
packages = find:
package_dir =
    = src
zip_safe = false
include_package_data = True

[options.extras_require]
indra =
	indra
neo4j =
	py2neo==3.1.2'
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybel = pybel.cli:main
pybel.object_importer =
	nodelink = pybel.io:from_json
	bytes = pybel.io:from_bytes
	bel = pybel:from_path
pybel.file_importer =
	nodelink = pybel.io:from_json_file
	bytes = pybel.io:from_pickle
	bel = pybel:from_lines
pybel.object_exporter =
	nodelink = pybel.io:to_json
	bytes = pybel.io:to_bytes
	bel = pybel.canonicalize:to_bel_lines
pybel.file_exporter =
	nodelink = pybel.io:to_json_file
	bytes = pybel.io:to_pickle
	bel = pybel.canonicalize:to_bel

# configuring bdist_wheel
[bdist_wheel]
universal = 1
